force-app/main/default/objects/CESContract__c/fields/Current_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_End_Date__c</fullName>
    <description>contract end date, including all renewal periods</description>
    <formula>DATE( 
year( Start_Date_New__c ) 
+ if((month( Start_Date_New__c ) + Total_Term_Months__c ) = 12, 0, floor((month( Start_Date_New__c ) + Total_Term_Months__c )/12)) + if(or(and(month( Start_Date_New__c )=12, mod(Total_Term_Months__c, 12)=0),and(month(Start_Date_New__c) + mod(Term_New__c, 12) = 12, Term_New__c &gt;= 12)),-1,0) 
, 
if( mod( month( Start_Date_New__c ) + Total_Term_Months__c , 12 ) = 0, 12 , mod( month( Start_Date_New__c ) + Total_Term_Months__c , 12 )) 
, 
min( 
day( Start_Date_New__c ), 
case( 
max( mod( month( Start_Date_New__c ) + Total_Term_Months__c , 12 ) , 1), 
9,30, 
4,30, 
6,30, 
11,30, 
2,28, 
31 
) 
) 
) - 1</formula>
    <inlineHelpText>contract end date, including all renewal periods</inlineHelpText>
    <label>Current End Date</label>
    <type>Date</type>
</CustomField>