force-app/main/default/objects/CESContract__c/fields/Current_Margin_Type__c.field-meta.xml
<CustomField>
    <fullName>Current_Margin_Type__c</fullName>
    <label>Current Margin Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Type</valueSetName>
    </valueSet>
</CustomField>