force-app/main/default/objects/CESContract__c/fields/Custom_Submit_Clicked__c.field-meta.xml
<CustomField>
    <fullName>Custom_Submit_Clicked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>system field to track if the custom submit button was used to submit the record.  approval process requires this to be true</description>
    <label>Custom Submit Clicked</label>
    <type>Checkbox</type>
</CustomField>