force-app/main/default/objects/CESContract__c/fields/Date_Issued_by_CA__c.field-meta.xml
<CustomField>
    <fullName>Date_Issued_by_CA__c</fullName>
    <label>Date Issued by Contract Admin</label>
    <type>DateTime</type>
</CustomField>