force-app/main/default/objects/CESContract__c/fields/Default_Billing_Net_Terms__c.field-meta.xml
<CustomField>
    <fullName>Default_Billing_Net_Terms__c</fullName>
    <description>formula to get net days due for agreements</description>
    <formula>IF ( CONTAINS(Record_Type_Name__c,&#39;NAESB&#39;), 10, 20 )</formula>
    <label>Default Billing Net Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>