force-app/main/default/objects/CESContract__c/fields/Default_Unit_Level_Text__c.field-meta.xml
<CustomField>
    <fullName>Default_Unit_Level_Text__c</fullName>
    <formula>&#39;unit&#39;</formula>
    <label>Default Unit Level Text</label>
    <type>Text</type>
</CustomField>