force-app/main/default/objects/CESContract__c/fields/Delivery_Obligation__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Obligation__c</fullName>
    <description>What is the delivery obligation of this contract?</description>
    <inlineHelpText>What is the delivery obligation of this contract?  Firm = Primary Firm</inlineHelpText>
    <label>Delivery Obligation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Firm</fullName>
            </value>
            <value>
                <fullName>Secondary Firm</fullName>
            </value>
            <value>
                <fullName>Firm (Fixed Quantity)</fullName>
            </value>
            <value>
                <fullName>Firm (Variable Quantity)</fullName>
            </value>
            <value>
                <fullName>Interruptible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>