force-app/main/default/objects/CESContract__c/fields/Demand_Charge_for_TC__c.field-meta.xml
<CustomField>
    <fullName>Demand_Charge_for_TC__c</fullName>
    <formula>IF ( ISPICKVAL( Demand_Charge_Level__c , &#39;Unit&#39;)
  , IF ( ISPICKVAL( MDQ_Unit__c , &#39;Therm&#39; )
     , Demand_Charge__c * 0.1 
     , Demand_Charge__c
    )
  , Demand_Charge__c 
)</formula>
    <label>Demand Charge for TC</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>