force-app/main/default/objects/CESContract__c/fields/Early_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Early_Termination_Date__c</fullName>
    <label>Early Termination Date</label>
    <type>Date</type>
</CustomField>