force-app/main/default/objects/CESContract__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The effective date of this contract.</description>
    <inlineHelpText>The effective date of this contract.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>