force-app/main/default/objects/CESContract__c/fields/Enhanced_Supply_Cap_Days__c.field-meta.xml
<CustomField>
    <fullName>Enhanced_Supply_Cap_Days__c</fullName>
    <label>Enhanced Supply Cap (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>