force-app/main/default/objects/CESContract__c/fields/Existing_Base_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Existing_Base_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Base Agreement</label>
    <referenceTo>CESContract__c</referenceTo>
    <relationshipLabel>CES Contracts</relationshipLabel>
    <relationshipName>CES_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>