force-app/main/default/objects/CESContract__c/fields/Facility_List__c.field-meta.xml
<CustomField>
    <fullName>Facility_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility List</label>
    <referenceTo>Facility_List__c</referenceTo>
    <relationshipLabel>CES Contracts</relationshipLabel>
    <relationshipName>CES_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>