force-app/main/default/objects/CESContract__c/fields/Field_Validation_Check__c.field-meta.xml
<CustomField>
    <fullName>Field_Validation_Check__c</fullName>
    <description>system field. Options are: 
Failed: Required fields missing values, 
Passed</description>
    <inlineHelpText>system field. Options are: 
Failed: Required fields missing values, 
Passed</inlineHelpText>
    <label>Field Validation Check</label>
    <length>100</length>
    <type>Text</type>
</CustomField>