force-app/main/default/objects/CESContract__c/fields/Fixed_Fee_Level__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Fee_Level__c</fullName>
    <label>Fixed Fee Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>unit</fullName>
            </value>
            <value>
                <fullName>month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>