force-app/main/default/objects/CESContract__c/fields/Fixed_Fees_Therm__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Fees_Therm__c</fullName>
    <formula>IF( ISPICKVAL(  Fixed_Fee_Level__c , &#39;Unit&#39;)
, Fixed_Fees__c * 0.1
, Fixed_Fees__c 
)</formula>
    <label>Fixed Fees Therm</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>