force-app/main/default/objects/CESContract__c/fields/Fixed_Percent_Locked_Target__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Percent_Locked_Target__c</fullName>
    <defaultValue>1</defaultValue>
    <description>how much of the volume should be locked once this contract is executed</description>
    <inlineHelpText>how much of the volume should be locked once this contract is executed</inlineHelpText>
    <label>Fixed Percent Locked Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>