force-app/main/default/objects/CESContract__c/fields/Fixed_Price_Cost__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price_Cost__c</fullName>
    <label>Fixed Price Cost</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>