force-app/main/default/objects/CESContract__c/fields/Fixed_Price_Margin__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price_Margin__c</fullName>
    <label>Fixed Price Margin</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>