force-app/main/default/objects/CESContract__c/fields/Fixed_Price_Target_Notifications_On__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price_Target_Notifications_On__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notifications will go out if price meets target conditions</description>
    <inlineHelpText>Notifications will go out if price meets target conditions</inlineHelpText>
    <label>Fixed Price Target Notifications On</label>
    <type>Checkbox</type>
</CustomField>