force-app/main/default/objects/CESContract__c/fields/GEM_DealHeader_ID__c.field-meta.xml
<CustomField>
    <fullName>GEM_DealHeader_ID__c</fullName>
    <description>external DealHeader ID to CRES GEM system for Producer Services</description>
    <inlineHelpText>external DealHeader ID to CRES GEM system for Producer Services</inlineHelpText>
    <label>GEM DealHeader ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>