force-app/main/default/objects/CESContract__c/fields/HOU_ID__c.field-meta.xml
<CustomField>
    <fullName>HOU_ID__c</fullName>
    <label>HOU ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>