force-app/main/default/objects/CESContract__c/fields/Index_Rate_Name__c.field-meta.xml
<CustomField>
    <fullName>Index_Rate_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Index Rate Name</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>CES Contracts</relationshipLabel>
    <relationshipName>CES_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>