force-app/main/default/objects/CESContract__c/fields/Index_Total_Adder__c.field-meta.xml
<CustomField>
    <fullName>Index_Total_Adder__c</fullName>
    <formula>Index_Adder__c +  Margin_on_Index__c + BLANKVALUE(Consultant_Unit_Margin__c,0)</formula>
    <label>Index Total Adder</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>