force-app/main/default/objects/CESContract__c/fields/Index_Total_Adder_ABS_Therm__c.field-meta.xml
<CustomField>
    <fullName>Index_Total_Adder_ABS_Therm__c</fullName>
    <formula>Index_Total_Adder_ABS__c * 0.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Index Total Adder ABS Therm</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>