force-app/main/default/objects/CESContract__c/fields/Init_Pending_Safari_Sync_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Init_Pending_Safari_Sync_Trigger__c</fullName>
    <formula>IF(
  AND(
    ISPICKVAL( Safari_Sync_Status__c, &#39;Pending Sync&#39; ),
    NOT(ISNULL( CES_Office__c )),
    Safari_Key__c = CES_Office__r.Customer_Number__c,
    NOT(ISNULL( Account__c )),
    NOT(ISNULL( Facility_List__c )),
    NOT(ISNULL( Opportunity__c ))
  )
  , True
  , False
)</formula>
    <label>Init Pending Safari Sync Trigger</label>
    <type>Checkbox</type>
</CustomField>