force-app/main/default/objects/CESContract__c/fields/Interface_Message__c.field-meta.xml
<CustomField>
    <fullName>Interface_Message__c</fullName>
    <description>Used to capture error from ENDUR</description>
    <label>Interface Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>