force-app/main/default/objects/CESContract__c/fields/Interstate_Pipeline_Demand__c.field-meta.xml
<CustomField>
    <fullName>Interstate_Pipeline_Demand__c</fullName>
    <inlineHelpText>For Charge Level = Unit, enter MMBtu equivalent value</inlineHelpText>
    <label>Interstate Pipeline Demand</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>