force-app/main/default/objects/CESContract__c/fields/Interstate_Pipeline_Demand_for_TC__c.field-meta.xml
<CustomField>
    <fullName>Interstate_Pipeline_Demand_for_TC__c</fullName>
    <formula>IF ( ISPICKVAL( Interstate_Pipeline_Demand_Level__c , &#39;Unit&#39;)
  , IF ( ISPICKVAL( MDQ_Unit__c , &#39;Therm&#39; )
     , Interstate_Pipeline_Demand__c * 0.1 
     , Interstate_Pipeline_Demand__c
    )
  , Interstate_Pipeline_Demand__c 
)</formula>
    <label>Interstate Pipeline Demand for TC</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>