force-app/main/default/objects/CESContract__c/fields/Interstate_Pipeline_Demand_Therm__c.field-meta.xml
<CustomField>
    <fullName>Interstate_Pipeline_Demand_Therm__c</fullName>
    <formula>IF( ISPICKVAL( Interstate_Pipeline_Demand_Level__c , &#39;Unit&#39;)
, Interstate_Pipeline_Demand__c * 0.1
, Interstate_Pipeline_Demand__c 
)</formula>
    <label>Interstate Pipeline Demand Therm</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>