force-app/main/default/objects/CESContract__c/fields/Is_Full_Safari_Number__c.field-meta.xml
<CustomField>
    <fullName>Is_Full_Safari_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>the contract number is the entire safari contract number, not just the TC portion.  This is mainly for loaded fixed contracts</description>
    <inlineHelpText>the contract number is the entire safari contract number, not just the TC portion.  This is mainly for loaded fixed contracts</inlineHelpText>
    <label>Is Full Safari Number</label>
    <type>Checkbox</type>
</CustomField>