force-app/main/default/objects/CESContract__c/fields/IsAgreement__c.field-meta.xml
<CustomField>
    <fullName>IsAgreement__c</fullName>
    <formula>CONTAINS( RecordType.Name , &#39;agreement&#39;)</formula>
    <label>IsAgreement</label>
    <type>Checkbox</type>
</CustomField>