force-app/main/default/objects/CESContract__c/fields/Issued_By__c.field-meta.xml
<CustomField>
    <fullName>Issued_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>who generated / issued the confirmation? PS</description>
    <inlineHelpText>who generated / issued the confirmation?</inlineHelpText>
    <label>Issued By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CES_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>