force-app/main/default/objects/CESContract__c/fields/KCC_Under_Adder__c.field-meta.xml
<CustomField>
    <fullName>KCC_Under_Adder__c</fullName>
    <label>Keepwhole Cashout Comment Under Adder</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>