force-app/main/default/objects/CESContract__c/fields/Keepwhole_Cashout_Comment_Under__c.field-meta.xml
<CustomField>
    <fullName>Keepwhole_Cashout_Comment_Under__c</fullName>
    <label>Keepwhole Cashout Comment Under</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>