force-app/main/default/objects/CESContract__c/fields/LDC_Fuel_Rate__c.field-meta.xml
<CustomField>
    <fullName>LDC_Fuel_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LDC Fuel Rate</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>CES Contracts (LDC Fuel Rate)</relationshipLabel>
    <relationshipName>CES_ContractsKaLD</relationshipName>
    <type>Lookup</type>
</CustomField>