force-app/main/default/objects/CESContract__c/fields/List_of_Facility_Lists__c.field-meta.xml
<CustomField>
    <fullName>List_of_Facility_Lists__c</fullName>
    <label>List of Facility Lists</label>
    <length>255</length>
    <type>Text</type>
</CustomField>