force-app/main/default/objects/CESContract__c/fields/Live_ID__c.field-meta.xml
<CustomField>
    <fullName>Live_ID__c</fullName>
    <label>Live ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>