force-app/main/default/objects/CESContract__c/fields/Lock_Cost__c.field-meta.xml
<CustomField>
    <fullName>Lock_Cost__c</fullName>
    <description>total cost of lock price transaction</description>
    <inlineHelpText>total cost of lock price transaction</inlineHelpText>
    <label>Lock Cost</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>