force-app/main/default/objects/CESContract__c/fields/Lock_Inline_Data__c.field-meta.xml
<CustomField>
    <fullName>Lock_Inline_Data__c</fullName>
    <formula>NOT(
OR(
  TEXT(Contract_Status__c) = null,
  TEXT(Contract_Status__c) = &#39;Not Submitted&#39;,
  TEXT(Contract_Status__c) = &#39;Submitted for SCA Approval&#39;,
  TEXT(Contract_Status__c) = &#39;SCA Approved - Contract Creation&#39;
)
)</formula>
    <label>Lock Inline Data</label>
    <type>Checkbox</type>
</CustomField>