force-app/main/default/objects/CESContract__c/fields/Management_Fee_Therm__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee_Therm__c</fullName>
    <formula>IF( ISPICKVAL( Management_Fee_Level__c , &#39;Unit&#39;)
, Management_Fee__c * 0.1
, Management_Fee__c 
)</formula>
    <label>Management Fee Therm</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>