force-app/main/default/objects/CESContract__c/fields/Margin_on_Over__c.field-meta.xml
<CustomField>
    <fullName>Margin_on_Over__c</fullName>
    <inlineHelpText>margin adder to the over index (the portion of the over adder that is margin)</inlineHelpText>
    <label>Margin on Over (MMBtu)</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>