force-app/main/default/objects/CESContract__c/fields/Margin_on_Under__c.field-meta.xml
<CustomField>
    <fullName>Margin_on_Under__c</fullName>
    <inlineHelpText>enter negative value for margin gain for CES.  enter positive value for margin loss to CES</inlineHelpText>
    <label>Margin on Under (MMBtu)</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>