force-app/main/default/objects/CESContract__c/fields/Market_Rate_Margin__c.field-meta.xml
<CustomField>
    <fullName>Market_Rate_Margin__c</fullName>
    <label>Market Rate Margin (MMBtu)</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>