force-app/main/default/objects/CESContract__c/fields/Market_Rate_Margin_for_TC__c.field-meta.xml
<CustomField>
    <fullName>Market_Rate_Margin_for_TC__c</fullName>
    <formula>IF ( ISPICKVAL( MDQ_Unit__c , &#39;Therm&#39; )
   , Market_Rate_Margin__c * 0.1
   , Market_Rate_Margin__c
)</formula>
    <label>Market Rate Margin for TC</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>