force-app/main/default/objects/CESContract__c/fields/Market_Rate_Margin_Therm__c.field-meta.xml
<CustomField>
    <fullName>Market_Rate_Margin_Therm__c</fullName>
    <formula>Market_Rate_Margin__c * 0.1</formula>
    <label>Market Rate Margin Therm</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>