force-app/main/default/objects/CESContract__c/fields/NIPSCO_Storage_Percent__c.field-meta.xml
<CustomField>
    <fullName>NIPSCO_Storage_Percent__c</fullName>
    <inlineHelpText>leave blank for 0%</inlineHelpText>
    <label>NIPSCO Storage Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>