force-app/main/default/objects/CESContract__c/fields/Nonpaid_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Nonpaid_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non-paid Consultant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CES Contracts (Non-paid Consultant)</relationshipLabel>
    <relationshipName>CES_Contracts5</relationshipName>
    <type>Lookup</type>
</CustomField>