force-app/main/default/objects/CESContract__c/fields/OFO_Applies__c.field-meta.xml
<CustomField>
    <fullName>OFO_Applies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OFO Applies</label>
    <type>Checkbox</type>
</CustomField>