force-app/main/default/objects/CESContract__c/fields/Opty_CES_Total_Margin__c.field-meta.xml
<CustomField>
    <fullName>Opty_CES_Total_Margin__c</fullName>
    <formula>Opportunity__r.Term_Volume__c * UDF_CESUM__c</formula>
    <label>Opty CES Total Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>