force-app/main/default/objects/CESContract__c/fields/original_margin_type__c.field-meta.xml
<CustomField>
    <fullName>original_margin_type__c</fullName>
    <label>Original Margin Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Type</valueSetName>
    </valueSet>
</CustomField>