force-app/main/default/objects/CESContract__c/fields/Over_Index_Name__c.field-meta.xml
<CustomField>
    <fullName>Over_Index_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Over Index Name</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>CES Contracts (Over Index Name)</relationshipLabel>
    <relationshipName>CES_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>