force-app/main/default/objects/CESContract__c/fields/Over_LDC_Fuel_Rate__c.field-meta.xml
<CustomField>
    <fullName>Over_LDC_Fuel_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Over LDC Fuel Rate</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>CES Contracts (Over LDC Fuel Rate)</relationshipLabel>
    <relationshipName>CES_ContractsKaLc</relationshipName>
    <type>Lookup</type>
</CustomField>