force-app/main/default/objects/CESContract__c/fields/Over_Pipeline_Fuel_Rate__c.field-meta.xml
<CustomField>
    <fullName>Over_Pipeline_Fuel_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Over Pipeline Fuel Rate</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>CES Contracts (Over Pipeline Fuel Rate)</relationshipLabel>
    <relationshipName>CES_ContractsKaLr</relationshipName>
    <type>Lookup</type>
</CustomField>