force-app/main/default/objects/CESContract__c/fields/Over_Total_Adder__c.field-meta.xml
<CustomField>
    <fullName>Over_Total_Adder__c</fullName>
    <formula>Over_Adder__c +  Margin_on_Over__c</formula>
    <label>Over Total Adder</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>