force-app/main/default/objects/CESContract__c/fields/Over_Total_Adder_Therm__c.field-meta.xml
<CustomField>
    <fullName>Over_Total_Adder_Therm__c</fullName>
    <formula>Over_Total_Adder__c * 0.1</formula>
    <label>Over Total Adder Therm</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>