force-app/main/default/objects/CESContract__c/fields/Paid_Consultant_2__c.field-meta.xml
<CustomField>
    <fullName>Paid_Consultant_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paid Consultant 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CES Contracts (Paid Consultant 2)</relationshipLabel>
    <relationshipName>CES_Contracts4</relationshipName>
    <type>Lookup</type>
</CustomField>