force-app/main/default/objects/CESContract__c/fields/Percent_of_Over_Index__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Over_Index__c</fullName>
    <label>Percent of Over Index</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>