force-app/main/default/objects/CESContract__c/fields/Pipeline_Fuel_Rate__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Fuel_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline Fuel Rate</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>CES Contracts (Pipeline Fuel Rate)</relationshipLabel>
    <relationshipName>CES_ContractsKaLS</relationshipName>
    <type>Lookup</type>
</CustomField>