force-app/main/default/objects/CESContract__c/fields/Pipeline_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline Lookup</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>CES Contracts</relationshipLabel>
    <relationshipName>CES_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>