force-app/main/default/objects/CESContract__c/fields/Premise_Count__c.field-meta.xml
<CustomField>
    <fullName>Premise_Count__c</fullName>
    <label>Premise Count</label>
    <summaryForeignKey>Contract_Premise__c.CESContract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>