force-app/main/default/objects/CESContract__c/fields/Price_at_Last_Check__c.field-meta.xml
<CustomField>
    <fullName>Price_at_Last_Check__c</fullName>
    <description>What the customer cost was the last time the system checked</description>
    <inlineHelpText>What the customer cost was the last time the system checked</inlineHelpText>
    <label>Price at Last Check</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>