force-app/main/default/objects/CESContract__c/fields/Price_Target__c.field-meta.xml
<CustomField>
    <fullName>Price_Target__c</fullName>
    <description>Notify user if this price or better is available ($/Dth)</description>
    <inlineHelpText>Notify user if this price or better is available ($/Dth)</inlineHelpText>
    <label>At or below</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>