force-app/main/default/objects/CESContract__c/fields/Pricing_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Scenario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Scenario</label>
    <referenceTo>Pipeline_Scenario__c</referenceTo>
    <relationshipLabel>CES Contracts</relationshipLabel>
    <relationshipName>CES_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>