force-app/main/default/objects/CESContract__c/fields/Pricing_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Scheme</label>
    <referenceTo>Pricing_Scheme__c</referenceTo>
    <relationshipLabel>CES Contracts</relationshipLabel>
    <relationshipName>CES_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>