force-app/main/default/objects/CESContract__c/fields/Pricing_Scheme_f__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Scheme_f__c</fullName>
    <formula>Pricing_Scheme__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Scheme_f</label>
    <type>Text</type>
</CustomField>