force-app/main/default/objects/CESContract__c/fields/Pricing_Terms__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Terms__c</fullName>
    <label>Pricing Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>