force-app/main/default/objects/CESContract__c/fields/Print_Type__c.field-meta.xml
<CustomField>
    <fullName>Print_Type__c</fullName>
    <description>1=Agreement, 2=Agreement+FL, 3=Agreement+FL+TC, 4=FL, 5=FL+TC, 6=TC</description>
    <label>Print Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>